Fixed dark mode inconsistencies with new grayscale theme.

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
   --color-gray-500: #adb5bd;
   --color-gray-600: #868e96;
   --color-gray-700: #495057;
-  --color-gray-700: #343a40;
+  --color-gray-800: #343a40;
   --color-gray-900: #212529;
   --color-gray-950: #212529;
 }
@@ -64,18 +64,20 @@
   html {
     font-family: "CabinetGrotesk Variable", system-ui, sans-serif;
   }
-  header,
+  header {
+    @apply bg-gray-50 shadow dark:shadow-gray-600/30 border-b border-gray-100 dark:bg-gray-950 dark:border-gray-900;
+  }
   body {
     @apply bg-gray-50 dark:bg-gray-950;
   }
   footer {
-    @apply bg-gray-950 dark:bg-gray-700;
+    @apply bg-black dark:bg-gray-800;
   }
   .wrapper {
     @apply mx-auto container px-4 sm:px-6 lg:px-8;
   }
   .card-container {
-    @apply border border-gray-300 bg-gray-100 rounded;
+    @apply rounded border dark:text-gray-50 bg-gray-100 dark:bg-gray-700/30 dark:hover:bg-gray-700 transition dark:border-gray-700/50 dark:hover:border-gray-700  hover:underline;
   }
   .navigation-links {
     @apply capitalize text-base leading-7 hover:underline hover:cursor-pointer transition-all underline-offset-4;
